Update audio for mp3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
-/* See here - but wanted NEON: http://hallofhavoc.com/2011/03/cool-text-effects-using-css3-text-shadow/*/
+/* Q: What is we wanted NEON: http://hallofhavoc.com/2011/03/cool-text-effects-using-css3-text-shadow/*/
 h2 {
 	background: black;
 	padding-top: 30px;
